### [v0.2] - 2025-12-09
#### Added
- Configuration of path redirects for 404 error.
- Support for .html template injection before and after #main div.
- Server::preload(__DIR__) for loading environment configuration.
- Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() for modular loading.

#### Changed
- Template::oneline() is now Template::flex(), allowing for dynamic creation of templates.
- Improvement of HTML semantics for main.php.
- Server component is now a unique class with unique traits. Is not a component anymore.
- Bee::env method now supports default value if environment variable is not found.
- Improved URI parsing and path normalization.

#### Fixed
- Unauthorized redirect path not working for views, throws 403.
- Default JS function request not sending json data correctly.

#### Removed
-